# lovr-rtsp

./: .gitignore  CMakeLists.txt  README.md  build.zig  copy_vendored_ffmpeg.sh
src/: funny.c  main.zig  main_v2.zig
